Wed Jan 28 08:56:07 1998  Ezra Peisach  <epeisach@mit.edu>

	* krb5kdc.M: Document V4 mode handling [krb5-kdc/464].

Wed Jan 21 15:15:58 1998  Ezra Peisach  <epeisach@mit.edu>

	* rtest.c (main): returns int, not void. ANSI X3.159-1989
	2.1.2.2.1 says so, and gcc now warns about it.

Fri Jan 16 03:33:50 1998  Tom Yu  <tlyu@mit.edu>

	* do_tgs_req.c: Add some explicit settings of errcode so that the
 	cleanup code doesn't try to construct a bogus error reply, which
 	was causing coredumps in the lookaside code.

Thu Dec 11 23:29:41 1997  Tom Yu  <tlyu@mit.edu>

	* kerberos_v4.c: Don't include sys/socket.h or netdb.h, as krb.h
	already gets those and Ultrix doesn't protect them against
	multiple inclusion.

Mon Nov 24 19:57:48 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* do_tgs_req.c (process_tgs_req): Add check to make sure cname and
		sname are non-NULL when syslogging an error because the
		principals don't match.
	
	* kdc_util.c (limit_string): Check to make sure the input string
		is non-NULL before operating on it.

Thu Nov 13 20:40:01 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* do_tgs_req.c (process_tgs_req): Only try to return a TGT for a
		"closer" realm if the request was for a TGT in the first
		place.  [krb5-kdc/459]

Wed Nov 12 14:47:46 1997  Ezra Peisach  <epeisach@mit.edu>

	* do_as_req.c (process_as_req): Reset master key after closing and
 	 	reopening DB when KDC_UPDATES_KDB compiled
 	 	in. [krb5-kdc/495 by Tony Mione]

Mon Nov 10 20:03:14 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* kdc_util.c (kdc_process_tgs_req): If not using the reply cache,
		properly handle a failure return from
		krb5_rd_req_decode_anyflag().

Wed Oct  8 12:20:35 1997  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* main.c (main): Initialize kdc error table with
	        initialize_kdc_error_table().

Thu Sep 25 21:19:08 1997  Tom Yu  <tlyu@mit.edu>

	* network.c: Replace KRB5_USE_IENT with something more sane.

	* do_tgs_req.c: Replace KRB5_USE_INET with something more sane.
